@@ -42,9 +42,23 @@ SCIP_Real SCIPhistoryGetVSIDS(
    SCIP_BRANCHDIR        dir                 /**< branching direction */
    );
 
+/** gets the average conflict length of the history entry */
+SCIP_EXPORT
+SCIP_Real SCIPhistoryGetAvgConflictlength(
+   SCIP_HISTORY*         history,            /**< branching and inference history */
+   SCIP_BRANCHDIR        dir                 /**< branching direction */
+   );
+
 /** get number of cutoffs counter */
 SCIP_EXPORT
 SCIP_Real SCIPhistoryGetCutoffSum(
+   SCIP_HISTORY*         history,            /**< branching and inference history */
+   SCIP_BRANCHDIR        dir                 /**< branching direction (downwards, or upwards) */
+   );
+
+/** get number of inferences counter */
+SCIP_EXPORT
+SCIP_Real SCIPhistoryGetInferenceSum(
    SCIP_HISTORY*         history,            /**< branching and inference history */
    SCIP_BRANCHDIR        dir                 /**< branching direction (downwards, or upwards) */
    );
@@ -74,7 +88,10 @@ SCIP_Real* SCIPvaluehistoryGetValues(
  */
 
 #define SCIPhistoryGetVSIDS(history,dir)   ((history)->vsids[dir])
+#define SCIPhistoryGetAvgConflictlength(history,dir) ((history)->conflengthsum[dir] > 0.0 \
+      ? (SCIP_Real)(history)->nactiveconflicts[dir]/(SCIP_Real)(history)->conflengthsum[dir] : 0.0)
 #define SCIPhistoryGetCutoffSum(history,dir)        ((history)->cutoffsum[dir])
+#define SCIPhistoryGetInferenceSum(history,dir)     ((history)->inferencesum[dir])
 #define SCIPvaluehistoryGetNValues(valuehistory)     (valuehistory)->nvalues
 #define SCIPvaluehistoryGetHistories(valuehistory)      (valuehistory)->histories
 #define SCIPvaluehistoryGetValues(valuehistory)      (valuehistory)->values
